--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -24,5 +24,5 @@
   list-style-type: none;
   font-weight: bold;
   font-size: 1.5vw;
-  font-family: "Monrope", sans-serif;
+  font-family: sans-serif, "Monrope";
 }
