--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -1,7 +1,7 @@
 .homeContainer {
   width: 100%;
   height: 85vh;
-  font-family: "Manrope", sans-serif;
+  font-family: sans-serif, "Manrope";
   text-align: center;
   font-size: 4vw;
   color: rgba(0, 53, 108, 1);
