--- a/src/Styles/Soporte/Select.module.css
+++ b/src/Styles/Soporte/Select.module.css
@@ -8,7 +8,7 @@
   border-radius: 25px;
   background-color: white;
   color: rgba(0, 53, 108, 1);
-  font-family: "Manrope", sans-serif;
+  font-family: sans-serif, "Manrope";
   font-size: 1vw;
   cursor: pointer;
 }
@@ -24,7 +24,7 @@
   border-top-right-radius: 18px;
   background-color: white;
   color: rgba(0, 53, 108, 1);
-  font-family: "Manrope", sans-serif;
+  font-family: sans-serif, "Manrope";
   font-size: 1vw;
   position: relative;
   cursor: pointer;
@@ -66,7 +66,7 @@
   text-align: left;
   margin-top: 1%;
   padding-top: 1%;
-  font-family: "Manrope", sans-serif;
+  font-family: sans-serif, "Manrope";
   font-size: 1vw;
   padding-bottom: 1%;
   padding-left: 1%;
