--- a/src/Styles/Soporte/Soporte.module.css
+++ b/src/Styles/Soporte/Soporte.module.css
@@ -1,97 +1,21 @@
 .soporteContainer {
   width: 100%;
-  height: 85vh;
   font-family: sans-serif, "Manrope";
   text-align: center;
   font-size: 4vw;
   color: rgba(0, 53, 108, 1);
   font-weight: bolder;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.filtros {
+.tickets {
   width: 100%;
-  height: 6vh;
+  margin-bottom: 2%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  color: white;
-  font-family: sans-serif, "Manrope";
-  font-size: 1.5vw;
-}
-
-.filtro {
-  width: 50%;
-  height: 100%;
-  background-color: rgba(106, 176, 249, 1);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border-bottom-left-radius: 25px;
-  border-bottom: 4px solid rgba(0, 53, 108, 1);
-  border-left: 4px solid rgba(0, 53, 108, 1);
-  border-right: 2px solid rgba(0, 53, 108, 1);
-  cursor: pointer;
-}
-
-.filtroSelected {
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 4px solid rgba(0, 53, 108, 1);
-  border-left: 4px solid rgba(0, 53, 108, 1);
-  border-right: 2px solid rgba(0, 53, 108, 1);
-  color: rgba(106, 176, 249, 1);
-  cursor: pointer;
-  z-index: 2;
-}
-
-.orden {
-  width: 50%;
-  height: 100%;
-  background-color: rgba(106, 176, 249, 1);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border-bottom-right-radius: 25px;
-  border-bottom: 4px solid rgba(0, 53, 108, 1);
-  border-right: 4px solid rgba(0, 53, 108, 1);
-  border-left: 2px solid rgba(0, 53, 108, 1);
-  cursor: pointer;
-}
-
-.ordenSelected {
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 4px solid rgba(0, 53, 108, 1);
-  border-left: 2px solid rgba(0, 53, 108, 1);
-  border-right: 4px solid rgba(0, 53, 108, 1);
-  color: rgba(106, 176, 249, 1);
-  cursor: pointer;
-  z-index: 2;
-}
-
-.textIcon {
-  width: 13%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
 }
