--- a/src/Styles/RecursosHumanos/BarraInformacion.css
+++ b/src/Styles/RecursosHumanos/BarraInformacion.css
@@ -4,7 +4,7 @@ body{
 }
 
 #data-bar{
-    background-color: #BEE0FF;
+    background-color: rgb(190, 224, 255);
     height: 100vh;
     width: 20%;
     max-width: 370px;
