--- a/src/Styles/Soporte/Select.module.css
+++ b/src/Styles/Soporte/Select.module.css
@@ -1,5 +1,6 @@
 .selectContainer {
   width: 53%;
+  max-height: 10vh;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 2%;
@@ -11,6 +12,7 @@
   font-family: sans-serif, "Manrope";
   font-size: 1vw;
   cursor: pointer;
+  z-index: 10;
 }
 
 .selected {
@@ -40,6 +42,7 @@
 
 .menu {
   width: 96%;
+  max-height: 30vh;
   padding-top: 1%;
   padding-bottom: 2%;
   padding-left: 3%;
@@ -52,6 +55,9 @@
   right: 0.05%;
   top: 100%;
   box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.4);
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .icons {
@@ -60,7 +66,8 @@
   align-items: center;
 }
 
-.option {
+.option,
+.optionTicket {
   width: 97%;
   height: 100%;
   text-align: left;
@@ -68,7 +75,7 @@
   padding-top: 1%;
   font-family: sans-serif, "Manrope";
   font-size: 1vw;
-  padding-bottom: 1%;
+  padding-bottom: 2%;
   padding-left: 1%;
   padding-right: 1%;
   display: flex;
@@ -77,7 +84,15 @@
   align-items: center;
 }
 
-.option:hover {
+.optionTicket {
+  padding-left: 6%;
+  font-size: 1.2vw;
+  padding-bottom: 4%;
+  padding-top: 2%;
+}
+
+.option:hover,
+.optionTicket:hover {
   font-family: sans-serif, "Manrope";
   font-weight: bolder;
   font-size: 1.2vw;
