--- a/src/Styles/Soporte/Ticket.module.css
+++ b/src/Styles/Soporte/Ticket.module.css
@@ -71,6 +71,18 @@
   font-weight: bolder;
 }
 
+.column {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.title {
+  margin-left: 2%;
+  margin-bottom: 1%;
+  font-weight: bolder;
+}
+
 .type {
   margin-left: 2%;
 }
@@ -111,6 +123,10 @@
   width: 80%;
   text-align: justify;
   font-weight: 400;
+}
+
+.marginTop {
+  margin-top: 1%;
 }
 
 .footerSection,
@@ -196,6 +212,10 @@
 }
 .item4 {
   z-index: 7;
+}
+
+.item5 {
+  z-index: 6;
 }
 
 .tarea {
@@ -301,6 +321,20 @@
   color: rgba(0, 53, 108, 1);
 }
 
+.inputTitulo {
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 2%;
+  width: 30%;
+  font-family: sans-serif, "Manrope";
+  font-size: 1.3vw;
+  font-weight: 400;
+  border-radius: 25px;
+  border: none;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
+  color: rgba(0, 53, 108, 1);
+}
+
 .inputDescription {
   height: 15vh;
   padding-top: 2%;
@@ -320,11 +354,13 @@
 }
 
 .input:focus,
+.inputTitulo:focus,
 .inputDescription:focus {
   outline: 1px solid rgba(0, 53, 108, 1);
 }
 
 .input::placeholder,
+.inputTitulo::placeholder,
 .inputDescription::placeholder {
   color: rgba(0, 53, 108, 1);
 }
@@ -338,4 +374,74 @@
   padding-bottom: 3%;
   padding-left: 5%;
   padding-right: 2%;
+}
+
+.ticketCreateContainer {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.ticketCreate {
+  width: 80vw;
+  height: 38vh;
+  background-color: white;
+  border: 2px solid rgba(0, 53, 108, 1);
+  border-radius: 25px;
+  z-index: 10;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 2%;
+}
+
+.createSelected {
+  height: 45.3vh;
+  width: 8%;
+  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  border: none;
+  z-index: 0;
+}
+
+.fechas {
+  width: 83%;
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fecha {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.start {
+  justify-content: flex-start;
+}
+
+.end {
+  justify-content: flex-end;
+}
+
+.fechaText {
+  margin-left: 2%;
+  font-weight: 400;
 }
