--- a/src/Styles/Soporte/Ticket.module.css
+++ b/src/Styles/Soporte/Ticket.module.css
@@ -62,8 +62,17 @@
   font-size: 1.3vw;
 }
 
+.headerSection {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bolder;
+}
+
 .titleSection {
-  width: 100%;
+  width: 50%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -444,4 +453,58 @@
 .fechaText {
   margin-left: 2%;
   font-weight: 400;
+}
+
+.escalar {
+  width: 25%;
+  background-color: rgba(0, 53, 108, 1);
+  color: white;
+  font-family: sans-serif, "Manrope";
+  font-size: 1.2vw;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 25px;
+  padding: 1.5%;
+  padding-left: 2%;
+  padding-right: 2%;
+  cursor: pointer;
+}
+
+.escalarSelectedContainer {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.escalarSelected {
+  width: 40%;
+  height: 40vh;
+  background-color: white;
+  border: 2px solid rgba(0, 53, 108, 1);
+  border-radius: 25px;
+  z-index: 1;
+}
+
+.escalarHeight {
+  height: 40.2vh;
+  width: 8%;
+  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  border: none;
+  z-index: 0;
 }
