--- a/src/Styles/Soporte/Ticket.module.css
+++ b/src/Styles/Soporte/Ticket.module.css
@@ -80,6 +80,10 @@
   font-weight: bolder;
 }
 
+.growTitle {
+  width: 100%;
+}
+
 .column {
   flex-direction: column;
   justify-content: center;
@@ -473,6 +477,10 @@
   cursor: pointer;
 }
 
+.escalar:hover {
+  background-color: rgb(23, 86, 152);
+}
+
 .escalarSelectedContainer {
   width: 100%;
   height: 100%;
@@ -488,17 +496,24 @@
 }
 
 .escalarSelected {
-  width: 40%;
-  height: 40vh;
+  width: 25%;
+  height: 25vh;
   background-color: white;
   border: 2px solid rgba(0, 53, 108, 1);
   border-radius: 25px;
+  padding: 1%;
+  padding-left: 2%;
+  padding-right: 4%;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .escalarHeight {
-  height: 40.2vh;
   width: 8%;
+  height: 29vh;
   padding-right: 0;
   padding-top: 0;
   padding-bottom: 0;
@@ -507,4 +522,31 @@
   justify-content: center;
   border: none;
   z-index: 0;
+}
+
+.selection {
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 1.2vw;
+}
+
+.selectItem {
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  font-weight: 500;
+  font-size: 1.2vw;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 5%;
+  padding-right: 2%;
+}
+
+.marginLeftEscalar {
+  margin-left: 5%;
 }
