--- a/src/Styles/RecursosHumanos/Cargas.css
+++ b/src/Styles/RecursosHumanos/Cargas.css
@@ -12,7 +12,6 @@
     background-color: rgb(222, 222, 222);
     padding: 1% 3%;
     border-radius: 10px;
-    margin-right: 26%;
 }
 
 select{
@@ -35,12 +34,15 @@ select{
     margin-bottom:5%;
 }
 
+.work-mode-div{
+    width: 50%;
+}
 
 .work-mode-div input{
     background-color: rgb(239, 239, 239);
     padding: 2%;
     border-radius: 15px;
-    width: 60%;
+    width: 70%;
     text-align: center;
 }
 
