--- a/src/Styles/Proyectos/Project.module.css
+++ b/src/Styles/Proyectos/Project.module.css
@@ -561,8 +561,23 @@ background-color: rgb(23, 86, 152);
 }
 
 .modal {
-    font-size: 12px;
+    color:rgba(0, 53, 108, 1);
+    border: 2px solid rgba(0, 53, 108, 1);
+    font-size: 25px;
+    background-color: #ffffff;
+    border-radius: 25px;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-family: sans-serif, "Manrope";
 }
+
+.buttonModal {
+    color:rgba(0, 53, 108, 1);  
+    font-family: sans-serif, "Manrope";
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
 .modal > .header {
     width: 100%;
     border-bottom: 1px solid rgb(45, 57, 218);
