--- a/src/Styles/Proyectos/Tarea.module.css
+++ b/src/Styles/Proyectos/Tarea.module.css
@@ -149,3 +149,27 @@
   background-color: #ff0000;
 }
 
+.notStarted  {
+  background-color: #b6b1aa;
+}
+.initiated {
+  background-color: #0085ff;
+}
+.analisys {
+  background-color: #bda145;
+}
+.developed {
+  background-color: #ac1f99;
+}
+.tested {
+  background-color: #9c1e2e;
+}
+.production {
+  background-color: #2df500;
+}
+.pproduction {
+  background-color: #3a7818;
+}
+.canceled {
+  background-color: #ff0000;
+}
