--- a/src/Styles/Soporte/Soporte.module.css
+++ b/src/Styles/Soporte/Soporte.module.css
@@ -1,3 +1,19 @@
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading {
+  width: 100%;
+  height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+
 .soporteContainer {
   width: 100%;
   font-family: sans-serif, "Manrope";
